@@ -12,6 +12,10 @@ glibc (2.21-0experimental4) UNRELEASED; urgency=medium
   * patches/hppa/submitted-mathdef.diff: new patch from John David Anglin to
     define __NO_LONG_DOUBLE_MATH on hppa.  Closes: #805836.
 
+  [ Samuel Thibault ]
+  * patches/hurd-i386/tg-tls-threadvar.diff: Update, to fix recursion while
+    accessing TLS while locking for accessing TLS.
+
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 22 Nov 2015 20:20:54 +0100
 
 glibc (2.21-0experimental3) experimental; urgency=medium
